<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UHFR6-DEMO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_uhf">About Uhf</string>
    <string name="action_about">About App</string>
    <string name="membank">membank</string>
    <string name="password">Password</string>
    <string name="filtrate_data_">Filtrate Data:</string>
    <string name="inversion">Inversion</string>
    <string name="_more_tags">InventoryEPC</string>
    <string name="single_tag">ReadAndWrite</string>
    <string name="set">Set</string>
    <string name="start">Start</string>
    <string name="stopping">Stopping</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="buzzer">Buzzer</string>
    <string name="intermission">Intermission</string>
    <string name="filter">Filter</string>
    <string name="singletag">SingleTag</string>
    <string name="please_length"> please enter length </string>
    <string name="open">Open</string>
    <string name="count">Count</string>
    <string name="rssi">RSSI</string>
    <string name="epc">EPC</string>
    <string name="id">ID</string>
    <string name="number">Number:</string>
    <string name="time">Time：</string>
    <string name="epc_">EPC:</string>
    <string name="writedata_">WriteData:</string>
    <string name="readdata">ReadData:</string>
    <string name="getepc">GetEPC</string>
    <string name="read">read</string>
    <string name="write">write</string>
    <string name="write_epc">EPC</string>
    <string name="read_power_dbm_">Read Power(dbm):</string>
    <string name="write_power_dbm_">Write Power(dbm):</string>
    <string name="freqregion_">FreqRegion:</string>
    <string name="get_all_">Get(all)</string>
    <string name="get_now_">Get(now)</string>
    <string name="freqpoints_">FreqPoints:</string>
    <string name="frequency_points_select_">Frequency points select >></string>
    <string name="get">Get</string>
    <string name="restart">Restart</string>
    <string name="close">Close</string>
    <string name="clear_success_">Clear success!</string>
    <string name="init_rfid_success_">Init Rfid Success!</string>
    <string name="init_rfid_fail_">Init Rfid Fail!</string>
    <string name="stop">Stop</string>
    <string name="get_epc_success_">Get EPC Success!</string>
    <string name="get_epc_fail_">Get EPC Fail!</string>
    <string name="_read_data_">\nRead Data:</string>
    <string name="read_success_">Read Success!</string>
    <string name="read_fail_">Read Fail!</string>
    <string name="write_data_success_">Write Data Success!</string>
    <string name="write_data_fail_">Write Data Fail!</string>
    <string name="please_get_epc_first_">Please get epc first!</string>
    <string name="set_read_power_success_now_power_">Set read power success！\nNow power：</string>
    <string name="set_read_power_fail_">Set read power fail！</string>
    <string name="set_write_power_success_now_power_">Set write power success！\nNow power：</string>
    <string name="set_write_power_fail_">Set  write power fail！</string>
    <string name="get_fail_">Get Fail!</string>
    <string name="get_success_">Get Success:\n</string>
    <string name="set_fail_">Set fail!</string>
    <string name="are_you_sure_to_restart_">Are you sure to restart ?</string>
    <string name="sure">Sure</string>
    <string name="restart_success_">Restart success!</string>
    <string name="cancel">Cancel</string>
    <string name="select_frequency_points_">Select Frequency points:</string>
    <string name="cancle">Cancel</string>
    <string name="quit_on_double_click_">Quit On Double-Click!</string>
    <string name="times">Times:</string>
    <string name="speed">Speed:</string>
    <string name="readtime">ReadTime:</string>
    <string name="sleeptime">SleepTime:</string>
    <string name="ms">ms</string>
    <string name="setintermissiontime">Set Intermission Time:</string>
    <string name="start_inventory_epc">Start Intentory</string>
    <string name="start_inventory_time">Timing Intentory</string>
    <string name="export_xls">SaveXLS</string>
    <string name="stop_inventory_epc">Stop Intentory</string>
    <string name="all_epc_sum">All read sum:</string>
    <string name="all_epc_count">Count:</string>
    <string name="multi_mode">Multi mode</string>
    <string name="is_tid">TID</string>
    <string name="is_play">isPlay</string>
    <string name="is_session1">Session1</string>
   	<string name="single_mode">Single mode</string>
    <string name="more_operation">More operation</string>
    <string name="inventory_epc">Inventory EPC</string>
    <string name="read_write_tag">Read Write Tag</string>
    <string name="para_settings">Para Settings</string>
    <string name="read_power">Read power:</string>
    <string name="write_power">Write power:</string>
    <string name="get_">Get</string>
    <string name="setting_">Settings</string>
    <string name="freq_area">Freq Area：</string>
    <string name="please_press_again_exit">Press back key again, exit</string>
    <string name="current_read_power">Current read power is </string>
    <string name="current_write_power">Current write power is</string>
    <string name="current_fre_band">Current frequency band is</string>
    <string name="set_success_">Set success!</string>
    <string name="freq_band">Frequency band >></string>
    <string name="select_epc">Select epc:</string>
    <string name="access_password">Access password:</string>
    <string name="membank_read_write">Membank:</string>
    <string name="start_addr">Start addr:</string>
    <string name="length">Length(word):</string>
    <string name="please_inventory_epc">Please inventory EPC</string>
    <string name="please_start_addr">Please input start address</string>
    <string name="please_access_password">Please input 4 bytes access password</string>
    <string name="please_write_data">Please input write data</string>
    <string name="please_write_data_type_error">The write data type is error</string>
    <string name="please_write_data_double_byte">Please input double bytes write data</string>
    <string name="current_version">Version name: </string>
    <string name="finish_date">Finish date: </string>
    <string name="about_soft">About sotf </string>
    <string name="lock_membank">Lock membank:</string>
    <string name="write_data">Write data(word hex):</string>
    <string name="lock_action">Lock type:</string>
    <string name="lock">Lock</string>
    <string name="lock_tag">Lock tag</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="kill">Kill</string>
    <string name="kill_tag">Kill tag</string>
    <string name="kill_password">Kill password</string>
    <string name="inituhfsuccess">Init uhf success！</string>
    <string name="inituhffail">Init uhf fail！</string>
    <string name="exiting">Exiting...</string>
    <string name="connection_failed">Module connection failed, please exit the application and re-enter.</string>
    <string name="timeout">StopTime(ms): </string>
    <string name="def_timeout">10000</string>

    <string name="timeInterval">Interval:</string>
    <string name="dwelltime">DwellTime:</string>
    <string name="strrb1">Performance preferred</string>
    <string name="strrb2">Balanced</string>
    <string name="strrb3">Energy saving</string>
    <string name="strrb4">Custom</string>
    <string name="getstr">Get</string>
    <string name="setstr">Set</string>

    <string name="reserved">reserved</string>
    <string name="confirm">confirm</string>
    <string name="tid">TID</string>
    <string name="user">USER</string>
    <string name="mode">expert mode</string>
</resources>
