<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context="com.handheld.uhfrdemo.MainActivity" >
  <!--   android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/title"
        android:text="@string/inventory_epc"
        android:background="@color/gre"
        android:textColor="@color/wr"
        android:textSize="26dp"
        android:gravity="center"
        android:layout_alignParentTop="true">
    </TextView>
    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/allbg"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/textView_f1"
            android:layout_height="match_parent"
            android:textColor="@color/blu"
            android:text="@string/inventory_epc"
            android:textSize="20dp"/>
      <TextView
          android:gravity="center"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:id="@+id/textView_f2"
          android:layout_height="match_parent"
          android:textColor="@color/gre"
          android:text="@string/read_write_tag"
          android:textSize="20dp"/>
      <TextView
          android:gravity="center"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:id="@+id/textView_f3"
          android:layout_height="match_parent"
          android:textColor="@color/gre"
          android:text="@string/lock"
          android:textSize="20dp"/>
      <TextView
          android:gravity="center"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:id="@+id/textView_f4"
          android:layout_height="match_parent"
          android:textColor="@color/gre"
          android:text="@string/kill"
          android:textSize="20dp"/>
      <TextView
          android:gravity="center"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:id="@+id/textView_f5"
          android:layout_height="match_parent"
          android:textColor="@color/gre"
          android:text="@string/setting_"
          android:textSize="20dp"/>
    </LinearLayout>
	<!-- <RadioGroup
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin">
        android:background="@android:color/white"
        android:drawableTop="@mipmap/ic_launcher"
        top的图片直接设置选择器的了，选择器状态state
        <RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="0"
            android:textColor="@color/blu"
            android:text="@string/inventory_epc" />

        <RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="1"
            android:text="@string/single_tag" />

        <RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="2"
            android:text="@string/lock" />
		<RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="3"
            android:text="@string/kill" />
        <RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="4"
            android:text="@string/setting_" />
    </RadioGroup> -->
    <FrameLayout 
        
        android:layout_below="@id/title"
        android:layout_above="@id/navigation"
        android:id="@+id/framelayout_main"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"></FrameLayout>
    
    <!-- <android.support.v4.view.ViewPager  
        android:layout_above="@id/navigation"
        android:id="@+id/viewpager"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content" >  
  		
        <android.support.v4.view.PagerTitleStrip  
            android:id="@+id/title"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_gravity="top" 
            android:background="@color/gre"/>  
    </android.support.v4.view.ViewPager>   -->
	
</RelativeLayout>
